Update project section and resume with improved styling

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
     <section id="home">
            
         <h2>Hi, I'm Shubham soni</h2>
-        <p> <h2> CSE undergrad | Backend Developer | AI/ML Enthusiast | 300+ <br>
-             Leetcode Problems | Leetcode contest rating 1489(max) | Newbie <br>
-             @CodeForces</h3>
+        <p> <h2> CSE undergrad | Backend Developer  350+ <br>
+             Leetcode Problems | Leetcode contest rating 1520* <br>
           <br> I'm a passionate problem solver skilled in Java, Python, DSA, and full-stack <br>
 
             development, driven to build impactful AI-based and web-based solutions.
@@ -43,8 +42,13 @@
     <!-- <a href=" https://drive.google.com/file/d/1vnEq5bM-TZDT3p7HnfBnQElWvtlqg8AB/view"> View Resume</a> -->
    
 
-  <button onclick="openPdf()"><h1>View Resume</h1></button>
-  <script src="./JS/script.js"></script>
+  
+     <a href="Assets/Shubham_Soni_Resume.pdf" target="_blank" class="resume-button">
+         📄 View Resume
+      </a>
+    <script src="./JS/script.js"></script>
+
+   
 
   
     <!-- <header>
@@ -59,7 +63,7 @@
     <section id="education">
         <h2>Education</h2>
         <h3>My academic journey and qualifications</h3>
-        <p>Sardar Patel university   2022- 2026</p>
+        <p>Sardar Patel university   </p>
         <h2>B.Tech in Computer Science and Engineering</h2>
         <p> Sardar Patel university, Madya Pardesh | 2022–2026</p>
         <p>Current CGPA: 8.28</p>
@@ -113,6 +117,22 @@
  
     <section id="projects">
        <h2 class="section-title">Projects</h2>
+
+       <div class="project-card">
+        <h3 class="project-title">Job Application Tracker</h3>
+        <p class="project-stack">Tech Stack - Java, Spring Boot, Spring Security, MySQL, JWT, React</p>
+        <p class="project-summary">
+            A full-stack application empowering job seekers to track and manage their applications with workflow automation and analytics insights.
+        </p>
+        <ul class="project-details">
+            <li>Designed and built RESTful APIs with JWT-based authentication and role-based authorization, securing 8+ endpoints with strict user-data isolation.</li>
+            <li>Architected a normalized MySQL database schema with proper indexing to enable efficient querying and status-based filtering of application records.</li>
+            <li>Implemented comprehensive CRUD operations for job applications with workflow progression (Applied → Interview → Offer/Rejected).</li>
+            <li>Developed an analytics dashboard displaying aggregate statistics to provide users with actionable insights on their job search progress.</li>
+            <li>Deployed backend on Railway with production-grade features including connection pooling, centralized error handling, and environment-based configuration.</li>
+            <li>Built a React-based frontend (in progress) with responsive UI components for seamless user interaction and data visualization.</li>
+        </ul>
+    </div>
 
     <div class="project-card">
         <h3 class="project-title">Journal Web App</h3>
